Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -18,6 +18,7 @@ sidebar_position: 3
 
 - [spo tenant site archive](../cmd/spo/tenant/tenant-site-archive.mdx) - archives a site collection [#6018](https://github.com/pnp/cli-microsoft365/issues/6018)
 - [spo tenant site unarchive](../cmd/spo/tenant/tenant-site-unarchive.mdx) - unarchives a site collection [#6019](https://github.com/pnp/cli-microsoft365/issues/6019)
+- [spo site admin list](../cmd/spo/site/site-admin-list.mdx) - lists all administrators of a specific SharePoint site [#5882](https://github.com/pnp/cli-microsoft365/issues/5882)
 
 **Teams:**
 
@@ -30,6 +31,8 @@ sidebar_position: 3
 - fixed duplicate white line in help page [#6071](https://github.com/pnp/cli-microsoft365/issues/6071)
 - fixed chili response behavior [#5987](https://github.com/pnp/cli-microsoft365/issues/5987)
 - fixed [spo file add](../cmd/spo/file/file-add.mdx) check-in issue [#6011](https://github.com/pnp/cli-microsoft365/issues/6011)
+- fixed docs for 'entra app permission remove' command [#6098](https://github.com/pnp/cli-microsoft365/issues/6098)
+- removed powershell comparison page
 
 ## [v7.9.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.9.0)
 
