--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -468,6 +468,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: 'martinlingstuyl'
   },
   {
+    name: 'Martin Loitzl',
+    company: '',
+    github: 'mloitzl',
+    x: 'mloitzl'
+  },
+  {
     name: 'Martin Macháček',
     company: 'Edhouse',
     github: 'MartinM85',
