--- a/docs/docs/cmd/spe/containertype/containertype-list.mdx
+++ b/docs/docs/cmd/spe/containertype/containertype-list.mdx
@@ -9,7 +9,7 @@ Retrieves a list of Container Types created for a SharePoint Embedded Applicatio
 ## Usage
 
 ```sh
-m365 Container Types list [options]
+m365 containertype list [options]
 ```
 
 ## Options
