--- a/docs/docs/cmd/spe/containertype/containertype-list.mdx
+++ b/docs/docs/cmd/spe/containertype/containertype-list.mdx
@@ -21,7 +21,7 @@ m365 containertype list [options]
 Retrieves a list of Container Types created for a SharePoint Embedded Application from the tenant.
 
 ```sh
-m365 Container Types list
+m365 containertype list
 ```
 
 ## Response
