--- a/docs/docs/cmd/spe/containertype/containertype-list.mdx
+++ b/docs/docs/cmd/spe/containertype/containertype-list.mdx
@@ -66,10 +66,11 @@ m365 containertype list
   <TabItem value="Text">
 
   ```text
-  ContainerTypeId                             
-  --------------------------------------------
-  /Guid(880ab3bd-5b68-01d4-3744-01a7656cf2ba)/
-  /Guid(3ec7c59d-ef31-0752-1ab5-5c343a5e8557)/  
+ContainerTypeId                               DisplayName                                    OwningAppId                                 
+--------------------------------------------  ---------------------------------------------  --------------------------------------------
+/Guid(073269af-f1d2-042d-2ef5-5bdd6ac83115)/  test1                                          /Guid(df4085cc-9a38-4255-badc-5c5225610475)/
+/Guid(880ab3bd-5b68-01d4-3744-01a7656cf2ba)/  test1                                          /Guid(50785fde-3082-47ac-a36d-06282ac5c7da)/
+/Guid(3ec7c59d-ef31-0752-1ab5-5c343a5e8557)/  SharePoint Embedded Free Trial Container Type  /Guid(e6b529fe-84db-412a-8e9c-5bbb75f7b037)/
   ```
 
   </TabItem>
