Fixes CLI in Azure Cloud Shell. Closes: #6117

--- a/docs/docs/cmd/external/connection/connection-doctor.mdx
+++ b/docs/docs/cmd/external/connection/connection-doctor.mdx
@@ -126,15 +126,15 @@ m365 external connection doctor --id contosoproducts --ux copilot
   <TabItem value="Text">
 
   ```text
-  ✔ Load connection
-  ✔ Load schema
-  ✖ Required semantic labels: Missing label iconUrl
-  ✔ Searchable properties
-  ✔ Items have content ingested
-  ℹ Connection configured for inline results (manual)
-  ℹ Items have activities recorded (manual)
-  ℹ Meaningful connection name and description (manual)
-  ✔ urlToItemResolver configured
+  √ Load connection
+  √ Load schema
+  × Required semantic labels: Missing label iconUrl
+  √ Searchable properties
+  √ Items have content ingested
+  i Connection configured for inline results (manual)
+  i Items have activities recorded (manual)
+  i Meaningful connection name and description (manual)
+  √ urlToItemResolver configured
   ```
 
   </TabItem>
