Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,15 @@ sidebar_position: 3
 
 # Release notes
 
+## v7.11.0
+
+### Changes
+
+- added eslint rule to handle promises [#6005](https://github.com/pnp/cli-microsoft365/issues/6005)
+- added validating permissions in [entra app permission remove](../cmd/entra/app/app-permission-remove.mdx) [#6109](https://github.com/pnp/cli-microsoft365/issues/6109)
+- fixed removing last app permission [#6110](https://github.com/pnp/cli-microsoft365/issues/6110)
+- fixed adding app permission when service principal doesn't exist [#6112](https://github.com/pnp/cli-microsoft365/issues/6112)
+
 ## [v7.10.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.10.0)
 
 ### New commands
