--- a/docs/docs/concepts/authorization-tokens.mdx
+++ b/docs/docs/concepts/authorization-tokens.mdx
@@ -24,7 +24,7 @@ When you decide to use your own Microsoft Entra application, you need to choose 
 
 :::
 
-When specifying a custom Microsoft Entra application to be used by the CLI for Microsoft 365, set the `CLIMICROSOFT365_ENTRAAPPID` environment variable to the ID of your Microsoft Entra application.
+When specifying a custom Microsoft Entra application to be used by the CLI for Microsoft 365, set the `cliEntraAppId` configuration setting or the `CLIMICROSOFT365_ENTRAAPPID` environment variable to the ID of your Microsoft Entra application.
 
 CLI for Microsoft 365 requires the following permissions to Microsoft 365 services:
 
