Removed displayName property

--- a/docs/docs/cmd/flow/flow-list.mdx
+++ b/docs/docs/cmd/flow/flow-list.mdx
@@ -160,8 +160,7 @@ m365 flow list --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --
         "provisioningMethod": "FromDefinition",
         "flowFailureAlertSubscribed": true,
         "isManaged": false
-      },
-      "displayName": "Contoso Invoicing Flow"
+      }
     }
   ]
   ```
@@ -170,17 +169,17 @@ m365 flow list --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --
   <TabItem value="Text">
 
   ```text
-  name                                  displayName
-  ------------------------------------  -----------------------------------------------
-  00afcb83-df7b-4fe0-ab9c-1542a1dc66a9  Contoso Invoicing Flow
+  name                                  
+  ------------------------------------  
+  00afcb83-df7b-4fe0-ab9c-1542a1dc66a9  
   ```
 
   </TabItem>
   <TabItem value="CSV">
 
   ```csv
-  name,displayName
-  00afcb83-df7b-4fe0-ab9c-1542a1dc66a9,Contoso Invoicing Flow
+  name
+  00afcb83-df7b-4fe0-ab9c-1542a1dc66a9
   ```
 
   </TabItem>
@@ -198,7 +197,6 @@ m365 flow list --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --
   name | 00afcb83-df7b-4fe0-ab9c-1542a1dc66a9
   id | /providers/Microsoft.ProcessSimple/environments/Default-1e852b49-bf4b-4ba5-bcd4-a8c4706c8ed4/flows/00afcb83-df7b-4fe0-ab9c-1542a1dc66a9
   type | Microsoft.ProcessSimple/environments/flows
-  displayName | Contoso Invoicing Flow
   ```
 
   </TabItem>
