--- a/docs/docs/cmd/spo/user/user-ensure.mdx
+++ b/docs/docs/cmd/spo/user/user-ensure.mdx
@@ -19,13 +19,10 @@ m365 spo user ensure [options]
 : Absolute URL of the site.
 
 `--entraId [--entraId]`
-: Id of the user in Entra. Specify either `aadId`, `entraId`, or `userName`.
-
-`--aadId [--aadId]`
-: (deprecated. Use `entraId` instead) Id of the user in Microsoft Entra. Specify either `aadId`, `entraId`, or `userName`.
+: Id of the user in Entra. Specify either `entraId` or `userName`.
 
 `--userName [userName]`
-: User's UPN (user principal name, e.g. john@contoso.com). Specify either `aadId`, `entraId`, or `userName`.
+: User's UPN (user principal name, e.g. john@contoso.com). Specify either `entraId` or `userName`.
 ```
 
 <Global />
