Removes deprecated Guest value from 'aad m365group user list' command. Closes #5558

--- a/docs/docs/cmd/entra/m365group/m365group-user-list.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-user-list.mdx
@@ -28,7 +28,7 @@ m365 aad m365group user list [options]
 : The display name of the Microsoft 365 group. Specify `groupId` or `groupDisplayName` but not both.
 
 `-r, --role [role]`
-: Filter the results to only users with the given role. Allowed values: `Owner`, `Member`, or (Deprecated) `Guest`.
+: Filter the results to only users with the given role. Allowed values: `Owner`, `Member`.
 
 `-p, --properties [properties]`
 : Comma-separated list of properties to retrieve.
