--- a/docs/docs/v9-upgrade-guidance.mdx
+++ b/docs/docs/v9-upgrade-guidance.mdx
@@ -10,7 +10,7 @@ We updated the [app permission add](./cmd/app/permission/permission-add.mdx) com
 
 #### What action do I need to take?
 
-- Please, check the documentation of the [app permission add](./cmd/app/permission/permission-add.mdx) command to see the updated options and adjust your scripts accordingly.
+Please, check the documentation of the [app permission add](./cmd/app/permission/permission-add.mdx) command to see the updated options and adjust your scripts accordingly.
 
 ## Entra ID
 
@@ -20,7 +20,22 @@ The deprecated Guest value was removed from the `role` option in the [aad m365gr
 
 #### What action do I need to take?
 
-- Please, check the documentation of the aad m365group user list](./cmd/entra/m365group/m365group-user-list.mdx) command to see the updated ``role` option and adjust your scripts accordingly.
+Please, check the documentation of the aad m365group user list](./cmd/entra/m365group/m365group-user-list.mdx) command to see the updated ``role` option and adjust your scripts accordingly.
+
+#### Aligned options with naming convention
+
+We updated option naming from `groupDisplayName` to `groupName` and `userPrincipalName` to `userName`.
+
+**Affected commands:**
+
+- [entra group user list](./cmd/entra/group/group-user-list.mdx)
+- [entra m365group conversation post list](./cmd/entra/m365group/m365group-conversation-post-list.mdx)
+- [entra m365group recyclebinitem list](./cmd/entra/m365group/m365group-recyclebinitem-list.mdx)
+- [outlook message get](./cmd/outlook/message/message-get.mdx)  
+
+#### What action do I need to take?
+
+Please, check the documentation of the affected commands to see the updated option naming and adjust your scripts accordingly.
 
 ## SharePoint
 
@@ -51,20 +66,13 @@ For this new major version, we've removed the deprecated `wait` option from the 
 - Please, check the documentation of the [spo tenant recyclebinitem restore](./cmd/spo/tenant/tenant-recyclebinitem-restore.mdx) command to see the updated output and adjust your scripts accordingly.
 - In the `spo tenant recyclebinitem restore` command, remove deprecated `wait` option from your scripts.
 
-#### Aligned options with naming convention
+### Removed the deprecated `wait` option and output from the `spo site remove` command
 
-We updated option naming from `groupDisplayName` to `groupName` and `userPrincipalName` to `userName`.
-
-**Affected commands:**
-
-- [entra group user list](./cmd/entra/group/group-user-list.mdx)
-- [entra m365group conversation post list](./cmd/entra/m365group/m365group-conversation-post-list.mdx)
-- [entra m365group recyclebinitem list](./cmd/entra/m365group/m365group-recyclebinitem-list.mdx)
-- [outlook message get](./cmd/outlook/message/message-get.mdx)  
+For this new major version, we've removed the deprecated `wait` option from the `spo site remove` command.
 
 #### What action do I need to take?
 
-- Please, check the documentation of the affected commands to see the updated option naming and adjust your scripts accordingly.
+In the [spo site remove](./cmd/spo/site/site-remove.mdx) command, remove deprecated `wait` option from your scripts.
 
 ### Removes duplicate property from 'spo list list' command.
 
@@ -72,4 +80,4 @@ In the [spo list list](./cmd/spo/list/list-list.mdx) we removed the `Url` from t
 
 #### What action do I need to take?
 
-- Please update your scripts not to use the `Url` property from the command output.
+Please update your scripts not to use the `Url` property from the command output.
