--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -12,6 +12,9 @@ sidebar_position: 3
 - added validating permissions in [entra app permission remove](../cmd/entra/app/app-permission-remove.mdx) [#6109](https://github.com/pnp/cli-microsoft365/issues/6109)
 - fixed removing last app permission [#6110](https://github.com/pnp/cli-microsoft365/issues/6110)
 - fixed adding app permission when service principal doesn't exist [#6112](https://github.com/pnp/cli-microsoft365/issues/6112)
+- fixed command output for [spo cdn set](../cmd/spo/cdn/cdn-set.mdx) [#6133](https://github.com/pnp/cli-microsoft365/issues/6133)
+- updated [flow list](../cmd/flow/flow-list.mdx) as admin to use v2 endpoint [#6096](https://github.com/pnp/cli-microsoft365/issues/6096)
+- fixed [spo group member add](../cmd/spo/group/group-member-add.mdx) command output [#6104](https://github.com/pnp/cli-microsoft365/issues/6104)
 
 ## [v7.10.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.10.0)
 
