Removes duplicate property from 'spo list list' command. Closes #6042

--- a/docs/docs/cmd/spo/list/list-list.mdx
+++ b/docs/docs/cmd/spo/list/list-list.mdx
@@ -126,8 +126,7 @@ m365 spo list list --webUrl https://contoso.sharepoint.com/sites/project-x --fil
       "ParserDisabled": false,
       "ServerTemplateCanCreateFolders": false,
       "TemplateFeatureId": "00000000-0000-0000-0000-000000000000",
-      "Title": "Theme Gallery",
-      "Url": "/_catalogs/theme"
+      "Title": "Theme Gallery"
     }
   ]
   ```
@@ -136,17 +135,17 @@ m365 spo list list --webUrl https://contoso.sharepoint.com/sites/project-x --fil
   <TabItem value="Text">
 
   ```text
-  Id                                    Url
+  Id                                    Title
   ------------------------------------  ----------------
-  66e5148c-7060-4479-88e7-636d79579148  /_catalogs/theme
+  66e5148c-7060-4479-88e7-636d79579148  Theme Gallery
   ```
 
   </TabItem>
   <TabItem value="CSV">
 
   ```csv
-  Id,Url
-  Theme Gallery,/_catalogs/theme,66e5148c-7060-4479-88e7-636d79579148
+  Id,Title
+  66e5148c-7060-4479-88e7-636d79579148,Theme Gallery
   ```
 
   </TabItem>
@@ -211,7 +210,6 @@ m365 spo list list --webUrl https://contoso.sharepoint.com/sites/project-x --fil
   ServerTemplateCanCreateFolders | true
   TemplateFeatureId | 00000000-0000-0000-0000-000000000000
   Title | Theme Gallery
-  Url | //\_catalogs/theme
   ```
 
   </TabItem>
