Removes duplicate property for 'teams tab list' command. Closes #5900

--- a/docs/docs/sample-scripts/teams/list-all-tabs-teams/index.mdx
+++ b/docs/docs/sample-scripts/teams/list-all-tabs-teams/index.mdx
@@ -50,7 +50,7 @@ List all tabs in Microsoft Teams teams in the tenant and exports the results in 
           ChannelMemberShipType = $channel.membershipType
           TabId                 = $tab.id
           TabNameDisplayName    = $tab.DisplayName
-          TeamsAppTabId         = $tab.teamsAppTabId
+          TeamsAppTabId         = $tab.teamsApp.id
         }
       }
     }
