Feedback from Jasey

--- a/docs/docs/cmd/teams/meeting/meeting-attendancereport-get.mdx
+++ b/docs/docs/cmd/teams/meeting/meeting-attendancereport-get.mdx
@@ -41,7 +41,7 @@ To run this command with application permissions, tenant administrators must cre
 
 :::
 
-:::warning
+:::note 
 
 This method doesn't support channel meetings.
 
