Fixes sample scripts for v8

--- a/docs/docs/sample-scripts/flow/flow-runs-day-summary/index.mdx
+++ b/docs/docs/sample-scripts/flow/flow-runs-day-summary/index.mdx
@@ -27,8 +27,7 @@ This script creates a report of all flow runs from current day and sends the rep
   $adaptiveCard = '{\"type\":\"AdaptiveCard\",\"body\":[{\"type\":\"TextBlock\",\"size\":\"Medium\",\"weight\":\"Bolder\",\"text\":\"${title}\"},{\"type\":\"TextBlock\",\"text\":\"${description}\",\"wrap\":true}],\"$schema\":\"http://adaptivecards.io/schemas/adaptive-card.json\",\"version\":\"1.3\"}'
   $webhook = 'https://contoso.webhook.office.com/webhookb2/1204eba2-061c-4442-9696-2a725cb2d094@2942bb31-1d49-4da6-8d3d-d0f9e1141486/IncomingWebhook/6e54c3958bde444e96fec9ecad356993/be11f523-2a4d-4eae-9d42-277410893c41'
 
-  $flows = m365 flow list --environmentName $environment --output json
-  $flows = $flows | ConvertFrom-Json
+  $flows = m365 flow list --environmentName $environment --output json | ConvertFrom-Json
   $currentDayDate = (Get-Date).ToUniversalTime().ToString("o")
   $previousDayDate = (Get-Date).AddDays(-1).ToUniversalTime().ToString("o")
 
@@ -37,7 +36,7 @@ This script creates a report of all flow runs from current day and sends the rep
   {
       $todayRuns = m365 flow run list --environmentName $environment --flowName $flow.name --triggerStartTime $previousDayDate --triggerEndTime $currentDayDate --output json | ConvertFrom-Json
 
-      $displayName = $flow.displayName
+      $displayName = $flow.properties.displayName
       $id = $flow.name
       
       $todayRunsCount = 0
