--- a/docs/docs/sample-scripts/flow/export-flow-logicapp/index.mdx
+++ b/docs/docs/sample-scripts/flow/export-flow-logicapp/index.mdx
@@ -23,8 +23,8 @@ This script will export the Power Automate flow *Your sample test flow*, make su
 
   ```powershell
   Write-Output "Getting environment info..."
-  $environmentId = $(m365 flow environment list --query "[?displayName == '(default)']" -o json | ConvertFrom-Json).Name
-  $flowId = $(m365 flow list --environmentName $environmentId --query "[?displayName == 'Your sample test flow']" -o json | ConvertFrom-Json)[0].Name
+  $environmentId = $(m365 flow environment get -o json | ConvertFrom-Json).name
+  $flowId = $(m365 flow list --environmentName $environmentId --query "[?displayName == 'Your sample test flow']" -o json | ConvertFrom-Json)[0].name
 
   Write-Output "Getting Flow info..."
   m365 flow export --environmentName $environmentId --name $flowId --format 'json'
@@ -37,7 +37,7 @@ This script will export the Power Automate flow *Your sample test flow*, make su
 
   ```bash
   #!/bin/bash
-  ENV_NAME=m365 flow environment list --query '[?contains(displayName,`default`)] .name'
+  ENV_NAME=m365 flow environment get --query 'name'
   FLOW_NAME=m365 flow list --environmentName $environmentId --query '[?displayName == `Your sample test flow`] .name'
   echo "Exporting your flow"
   m365 flow export --environmentName $ENV_NAME --name $FLOW_NAME -f 'json'
