--- a/docs/docs/sample-scripts/spo/change-owner-group-membership/index.mdx
+++ b/docs/docs/sample-scripts/spo/change-owner-group-membership/index.mdx
@@ -30,19 +30,19 @@ This is a script which takes a subset or all members of the default owner group 
   Write-Host "Total number sites which has the keyword '$siteFilterKeyword' in their title are : $TotalSiteCount"
   $SiteCounter = 1
 
-  Foreach ($site in $siteList){
+  Foreach ($site in $siteList) {
       Write-Host "Processing site No : $SiteCounter / $TotalSiteCount."
       Write-Host "Site URL - $($site.Url)"
       # Getting only Associated Owner and Member Groups using JMES Query
       $AssociatedGroups = m365 spo web get --url $site.Url --withGroups --query "{MemberGroup: AssociatedMemberGroup, OwnerGroup: AssociatedOwnerGroup}" --output json | ConvertFrom-Json
 
       # Getting list of members from the Owner Group
-      $UserList = m365 spo group member list --webUrl $site.Url --groupId $AssociatedGroups.OwnerGroup.Id --query "value" --output json | ConvertFrom-Json
+      $UserList = m365 spo group member list --webUrl $site.Url --groupId $AssociatedGroups.OwnerGroup.Id --output json | ConvertFrom-Json
 
       Write-Host "Total Users available in the Group, $($AssociatedGroups.OwnerGroup.Title) : "$UserList.Count
       Foreach ($User in $UserList){
           # Adding the user to Member Group
-          m365 spo group member add --webUrl $site.Url --groupId $AssociatedGroups.MemberGroup.Id --userName "$($User.UserPrincipalName)"
+          m365 spo group member add --webUrl $site.Url --groupId $AssociatedGroups.MemberGroup.Id --userNames "$($User.UserPrincipalName)"
           
           # Removing the user from Owner Group
           m365 spo group member remove --webUrl $site.Url --groupId $AssociatedGroups.OwnerGroup.Id --userName "$($User.UserPrincipalName)" --force
