Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -15,6 +15,7 @@ sidebar_position: 3
 - fixed command output for [spo cdn set](../cmd/spo/cdn/cdn-set.mdx) [#6133](https://github.com/pnp/cli-microsoft365/issues/6133)
 - updated [flow list](../cmd/flow/flow-list.mdx) as admin to use v2 endpoint [#6096](https://github.com/pnp/cli-microsoft365/issues/6096)
 - fixed [spo group member add](../cmd/spo/group/group-member-add.mdx) command output [#6104](https://github.com/pnp/cli-microsoft365/issues/6104)
+- fixed sample scripts for v8
 
 ## [v7.10.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.10.0)
 
